# A-Crab-s-Journey

./: .gitignore  AggressiveMeleeEnemy.cpp  AggressiveMeleeEnemy.h  AnimatedSprite.cpp  AnimatedSprite.h  Bestiary.cpp  Bestiary.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  CMakeLists.txt  ChasingRangedEnemy.cpp  ChasingRangedEnemy.h  Collider.cpp  Collider.h  Consumable.cpp  Consumable.h  DefensiveMeleeEnemy.cpp  DefensiveMeleeEnemy.h  Enemy.cpp  Enemy.h  FloorMap.cpp  FloorMap.h  Game.cpp  Game.h  GameCharacter.cpp  GameCharacter.h  Global Progress.txt  GlobalProgress.cpp  GlobalProgress.h  Item.cpp  Item.h  MeleeWeapon.cpp  MeleeWeapon.h  Observer.cpp  Observer.h  Obstacle.cpp  Obstacle.h  Player.cpp  (+36 more)
Assets/: Icon.rc
Data/: Enemies.txt  Global Progress.txt
Enemy_source_files/: AggressiveMeleeEnemy.cpp  AggressiveMeleeEnemy.h  ChasingRangedEnemy.cpp  ChasingRangedEnemy.h  DefensiveMeleeEnemy.cpp  DefensiveMeleeEnemy.h  Enemy Data.txt  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  StaticRangedEnemy.cpp  StaticRangedEnemy.h
States_source_files/: State.h  StateBestiary.cpp  StateBestiary.h  StateDisplayMap.cpp  StateDisplayMap.h  StateGameOver.cpp  StateGameOver.h  StateMainMenu.cpp  StateMainMenu.h  StateManageInventory.cpp  StateManageInventory.h  StatePause.cpp  StatePause.h  StatePearlShop.cpp  StatePearlShop.h  StatePlay.cpp  StatePlay.h  StatePrepareRun.cpp  StatePrepareRun.h  StateSettings.cpp  StateSettings.h  StateShop.cpp  StateShop.h  StateTitleScreen.cpp  StateTitleScreen.h
test/: CMakeLists.txt  FloorMapTest.cpp  Obstacle.cpp  ObstacleTest.cpp  PlayerTest.cpp  RoomTest.cpp
test/lib/googletest/cmake/: internal_utils.cmake
test/lib/googletest/docs/: AdvancedGuide.md  Documentation.md  FAQ.md  Pkgconfig.md  Primer.md  PumpManual.md  Samples.md  XcodeGuide.md
test/lib/googletest/include/gtest/: gtest.h
test/lib/googletest/include/gtest/internal/: gtest-filepath.h  gtest-param-util-generated.h  gtest-port.h
test/lib/googletest/samples/: sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc
test/lib/googletest/scripts/: gen_gtest_pred_impl.py  upload.py
test/lib/googletest/src/: gtest-filepath.cc  gtest-internal-inl.h  gtest.cc  gtest_main.cc
test/lib/googletest/test/: gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-param-test2_test.cc  gtest-param-test_test.cc  gtest-port_test.cc  gtest-printers_test.cc  gtest-typed-test2_test.cc  gtest-typed-test_test.cc  gtest-typed-test_test.h  gtest-unittest-api_test.cc  gtest_catch_exceptions_test_.cc  gtest_env_var_test.py  gtest_filter_unittest_.cc  gtest_help_test_.cc  gtest_list_tests_unittest_.cc  gtest_output_test_.cc
